Build(configs): add settings to use jennifer

--- a/shard.yml
+++ b/shard.yml
@@ -11,3 +11,23 @@ targets:
 crystal: 1.8.2
 
 license: MIT
+
+
+dependencies:
+  kemal:
+    github: kemalcr/kemal
+
+  jennifer:
+    github: imdrasil/jennifer.cr
+    version: "= 0.12.0"
+    
+  pg:
+    github: will/crystal-pg
+    version: "= 0.26.0" 
+
+  sam:
+    github: imdrasil/sam.cr
+    version: 0.4.2
+
+  dotenv:
+    github: drum445/dotenv
